fixes heading overflows

--- a/styles/site.scss
+++ b/styles/site.scss
@@ -61,6 +61,7 @@ body {
 
 h1 {
     font-size: 3.2rem;
+    width: 100%;
 }
 
 h2 {
